// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderConflictsSurface structural snapshot — merge in progress 1`] = `
<Box
  borderColor="cyan"
  borderStyle="round"
  flexDirection="column"
  flexShrink={0}
  paddingX={1}
  width={120}
>
  <Box
    justifyContent="space-between"
  >
    <Text
      bold={true}
    >
      Conflicts *
    </Text>
    <Text
      dimColor={true}
    >
      merge — all conflicts resolved
    </Text>
  </Box>
  <Text
    dimColor={true}
  >
    All conflicts resolved. Press C to continue the merge, or &lt; to go back.
  </Text>
</Box>
`;

exports[`renderConflictsSurface structural snapshot — no operation 1`] = `
<Box
  borderColor="cyan"
  borderStyle="round"
  flexDirection="column"
  flexShrink={0}
  paddingX={1}
  width={120}
>
  <Box
    justifyContent="space-between"
  >
    <Text
      bold={true}
    >
      Conflicts *
    </Text>
    <Text
      dimColor={true}
    >
      no operation in progress
    </Text>
  </Box>
  <Text
    dimColor={true}
  >
    No merge, rebase, cherry-pick, or revert in progress.
  </Text>
</Box>
`;
